--- a/templates/app1/friends.html
+++ b/templates/app1/friends.html
@@ -13,7 +13,6 @@
 <th>gender</th>     <!----------------  ---利用 <th>将这个值设置为表头-->
 <th>年龄</th>
     <td>发起通信</td>
-<td>消息数</td>
 </tr>
 <!-----------------------------------这是第一行-->
     {% for obj in data%}
@@ -24,8 +23,7 @@
         <td>{{obj.username}}</td>
         <td>{{obj.gender}}</td>
         <td>{{obj.age}}</td>
-        <td><a href="http://127.0.0.1:8000/app1/{{obj.qqid}}/index2">发起 </a>--></td>
-        <td><a href="http://127.0.0.1:8000/app1/{{send_id}}/index2" >查看消息</a> </td>
+        <td><a href="http://127.0.0.1:8000/app1/{{obj.qqid|add:send_id|add:-2000000000}}/index2">发起 </a>--></td>
         <br/>
     </tr>
     {%endif%}
